updated to use build in javascript row and index functions, added nameing to rows

--- a/spreadsheet.html
+++ b/spreadsheet.html
@@ -93,87 +93,82 @@
           </head
         </thead> -->
           <tbody>
-            <tr class="row_0">
-              <td class="col_0" contenteditable="true" scope="row"></td>
-              <td class="col_1"></td>
-              <td class="col_2"></td>
-              <td class="col_3"></td>
-              <td class="col_4"></td>
-              <td class="col_5"></td>
-              <td class="col_6"></td>
-              <td class="col_7"></td>
+            <tr class="row_0" name = "0">
+              <td name = "A" class="col_0" contenteditable="true" scope="row"></td>
+              <td name = "B" class="col_1"></td>
+              <td name = "C" class="col_2"></td>
+              <td name = "D "class="col_3"></td>
+              <td name = "E" class="col_4"></td>
+              <td name = "F" class="col_5"></td>
+              <td name = "G" class="col_6"></td>
+              <td name = "H" class="col_7"></td>
               <td class="col_8"></td>
             </tr>
-            <tr class="row_1">
-              <td class="col_0" contenteditable="true" scope="row"></td>
-              <td class="col_1"></td>
-              <td class="col_2"></td>
-              <td class="col_3"></td>
-              <td class="col_4"></td>
-              <td class="col_5"></td>
-              <td class="col_6"></td>
-              <td class="col_7"></td>
+            <tr class="row_1" name = "1">
+              <td name = "A" class="col_0" contenteditable="true" scope="row"></td>
+              <td name = "B" class="col_1"></td>
+              <td name = "C" class="col_2"></td>
+              <td name = "D "class="col_3"></td>
+              <td name = "E" class="col_4"></td>
+              <td name = "F" class="col_5"></td>
+              <td name = "G" class="col_6"></td>
+              <td name = "H" class="col_7"></td>
               <td class="col_8"></td>
             </tr>
-            </tr>
-            <tr class="row_2">
-              <td class="col_0" contenteditable="true" scope="row"></td>
-              <td class="col_1"></td>
-              <td class="col_2"></td>
-              <td class="col_3"></td>
-              <td class="col_4"></td>
-              <td class="col_5"></td>
-              <td class="col_6"></td>
-              <td class="col_7"></td>
+            <tr class="row_2" name = "2">
+              <td name = "A" class="col_0" contenteditable="true" scope="row"></td>
+              <td name = "B" class="col_1"></td>
+              <td name = "C" class="col_2"></td>
+              <td name = "D "class="col_3"></td>
+              <td name = "E" class="col_4"></td>
+              <td name = "F" class="col_5"></td>
+              <td name = "G" class="col_6"></td>
+              <td name = "H" class="col_7"></td>
               <td class="col_8"></td>
             </tr>
-            </tr>
-            <tr class="row_3">
-              <td class="col_0" contenteditable="true" scope="row"></td>
-              <td class="col_1"></td>
-              <td class="col_2"></td>
-              <td class="col_3"></td>
-              <td class="col_4"></td>
-              <td class="col_5"></td>
-              <td class="col_6"></td>
-              <td class="col_7"></td>
+            <tr class="row_3" name = "3">
+              <td name = "A" class="col_0" contenteditable="true" scope="row"></td>
+              <td name = "B" class="col_1"></td>
+              <td name = "C" class="col_2"></td>
+              <td name = "D "class="col_3"></td>
+              <td name = "E" class="col_4"></td>
+              <td name = "F" class="col_5"></td>
+              <td name = "G" class="col_6"></td>
+              <td name = "H" class="col_7"></td>
               <td class="col_8"></td>
             </tr>
-            </tr>
-            <tr class="row_4">
-              <td class="col_0" contenteditable="true" scope="row"></td>
-              <td class="col_1"></td>
-              <td class="col_2"></td>
-              <td class="col_3"></td>
-              <td class="col_4"></td>
-              <td class="col_5"></td>
-              <td class="col_6"></td>
-              <td class="col_7"></td>
+            <tr class="row_4" name = "4">
+              <td name = "A" class="col_0" contenteditable="true" scope="row"></td>
+              <td name = "B" class="col_1"></td>
+              <td name = "C" class="col_2"></td>
+              <td name = "D "class="col_3"></td>
+              <td name = "E" class="col_4"></td>
+              <td name = "F" class="col_5"></td>
+              <td name = "G" class="col_6"></td>
+              <td name = "H" class="col_7"></td>
               <td class="col_8"></td>
             </tr>
-            </tr>
-            <tr class="row_5">
-              <td class="col_0" contenteditable="true" scope="row"></td>
-              <td class="col_1"></td>
-              <td class="col_2"></td>
-              <td class="col_3"></td>
-              <td class="col_4"></td>
-              <td class="col_5"></td>
-              <td class="col_6"></td>
-              <td class="col_7"></td>
+            <tr class="row_5" name = "5">
+              <td name = "A" class="col_0" contenteditable="true" scope="row"></td>
+              <td name = "B" class="col_1"></td>
+              <td name = "C" class="col_2"></td>
+              <td name = "D "class="col_3"></td>
+              <td name = "E" class="col_4"></td>
+              <td name = "F" class="col_5"></td>
+              <td name = "G" class="col_6"></td>
+              <td name = "H" class="col_7"></td>
               <td class="col_8"></td>
             </tr>
-            <tr class="row_6">
-              <td class="col_0" contenteditable="true" scope="row"></td>
-              <td class="col_1"></td>
-              <td class="col_2"></td>
-              <td class="col_3"></td>
-              <td class="col_4"></td>
-              <td class="col_5"></td>
-              <td class="col_6"></td>
-              <td class="col_7"></td>
+            <tr class="row_6" name = "6">
+              <td name = "A" class="col_0" contenteditable="true" scope="row"></td>
+              <td name = "B" class="col_1"></td>
+              <td name = "C" class="col_2"></td>
+              <td name = "D "class="col_3"></td>
+              <td name = "E" class="col_4"></td>
+              <td name = "F" class="col_5"></td>
+              <td name = "G" class="col_6"></td>
+              <td name = "H" class="col_7"></td>
               <td class="col_8"></td>
-            </tr>
             </tr>
           </tbody>
         </table>
